# sk-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  build.rs
.sqlx/: query-53978066a34c97f83db8944f5266c9e1f186dd8fab58e47359c0e1033326a2dc.json  query-832a19b5bc7055b5f5808671cebff7265f862ed513572fc7d75d0035b89b3daf.json  query-86135b9c14d0eddd04f756797aef0c4efc8e2d2e7b6cd76d10331c8cd66b4c97.json  query-8f015929b7102c82c1d229931d775b69145ca571abf75f6449c4876f9b222603.json  query-aa4b49ac7db4f328f69d576f072cfb5dc7e61b7ee777d392f6528dd762c93f15.json  query-c923e8569cbfe690afd83abb35c36fb596697ad969dac4923ee886ab04e48758.json  query-d34789e2cf86012a2123d3883ac13bac4d648bfa01eca7406c080ad18b8f3c2b.json  query-d5a4c21eefa898e70685e3fb648bddf0412121d26055ced6b445bbc4bf59432b.json
migrations/: 20240911011211_init.sql
src/: main.rs  token.rs
static/: regular.min.css  solid.min.css
templates/: base.html  frag-board.html  frag-new-voter-form.html  index.html  new_poll.html  new_poll_new_option.html  share_poll.html  view_poll.html
