[package]
name = "sk-rs"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive", "env", "unicode", "wrap_help"] }
tokio = { version = "1.38.1", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header", "form"] }
tower-http = { version = "0.5.2", features = ["fs", "compression-br", "compression-gzip", "compression-zstd", "decompression-br", "decompression-gzip", "decompression-zstd"] }
sqlx = { version = "0.8.2", features = ["derive", "macros", "migrate", "runtime-tokio", "sqlite", "time", "json"] }
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.128"
axum-htmx = { version = "0.6.0", features = ["auto-vary"] }
minijinja = { version = "2.3.1", features = ["unicode", "json", "preserve_order", "speedups", "urlencode"] }
minijinja-embed = "2.3.1"
minijinja-contrib = { version = "2.3.1", features = ["datetime"] }

[dev-dependencies]
serde_json = "1.0.128"

[build-dependencies]
minijinja-embed = "2.3.1"
